# Scratch-head

./: .gitignore  .gitmodules  README.md
Raspberry Pi/: README.md
Raspberry Pi/video_catch/: CMakeLists.txt  README.md  customchartwidget.cpp  customchartwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
k210/: buzzer.c  buzzer.h  color_detect.py  face_detect.py  minst.py  number_detect.py
mspm/: README.md
mspm/.theia/: launch.json
mspm/Chassis_controller/: .ccsproject  .cproject  .project  chassis_controller_main.c  chassis_controller_main.syscfg
mspm/Chassis_controller/Drivers/ENCODER/: encoder_controller.c  encoder_controller.h
mspm/Chassis_controller/Drivers/MOTOR/: motor_controller.c  motor_controller.h
mspm/Chassis_controller/Drivers/MPU6050/: inv_mpu.c  inv_mpu_dmp_motion_driver.c  mspm0_i2c.h
mspm/Chassis_controller/Drivers/MSPM0/: interrupt.c
mspm/Chassis_controller/Drivers/OLED_Hardware_I2C/: oled_hardware_i2c.h
mspm/Chassis_controller/Drivers/PWM/: pwm_controller.c  pwm_controller.h
mspm/Chassis_controller/Drivers/UART/: uart_controller.c  uart_controller.h
mspm/Chassis_controller/Tools/: pid_controller.c  pid_controller.h  ring_buffer.c  ring_buffer.h
mspm/MPU/: MPU.c  MPU.h
stm32/: README.md  menu.c  menu.h  test.c
stm32/多级菜单/: menu.c  menu.h
stm32/按键模块/: README.md  button.c  button.h  button_test.c
